# parquet_research

./: CMakeLists.txt  README.md  vcpkg.json
bench/: CMakeLists.txt
include/parcook/: aggregation.hpp  arithmetic.hpp  selection.hpp
src/: aggregation.cpp  arithmetic.cpp  common.cpp  common.h  selection.cpp
test/: CMakeLists.txt  test.hpp  test_aggregation.cpp  test_arithmetic.cpp  test_selection.cpp
